# MiniMusic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  lyrics.rs  main.rs  media.rs  models.rs  scanner.rs
src/api/: tauri.ts
src/components/: LyricPanel.tsx  NowPlayingPage.tsx  PlayerBar.tsx  Sidebar.tsx  SongList.tsx  TopBar.tsx
src/hooks/: useAudioPlayer.ts
src/stores/: musicStore.ts  playerStore.ts
src/styles/: global.css
src/types/: music.ts
src/utils/: format.ts  lyric.ts  player.ts
