[package]
name = "minimusic"
version = "0.1.0"
description = "A lightweight local music player"
authors = ["magl"]
edition = "2021"

[lib]
name = "minimusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
id3 = "1"
base64 = "0.22"
mp3-duration = "0.1"
dirs = "5"
